# gauv

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/bgw/: .gitignore  README.md  test_full_bgw.cpp  test_mul.cpp
example/conversion/: test_bin2arith.cpp
examples/: bgw.wys  mul.mpc
lib/: README.md
runtime/: README.md
runtime/Cpp/: README.md
sp24-scripts/: completed_tasks.txt  completed_tasks_bin2arith.txt  experiment_results.csv  experiment_results_bin2arith.csv  script-bin2arith.sh  script-scalable.sh
src/: main.cpp
src/backend/: builtin.hpp  common.h  common.hpp  graph.cpp  graph.hpp  graph_builder.hpp  node.cpp  node.hpp  node_operation.hpp  operation.cpp  operation.hpp  operator.cpp  operator.hpp  prover.hpp  transformer.hpp
src/bgwfrontend/: builtin.hpp  common.hpp  context.hpp  variable.hpp
src/frontend/: README.md  frontend.h
src/grammar/: MPCLexer.g4  MPCParser.g4
src/mpcgraph/: builtin.hpp  context.hpp  dag.hpp  excepts.hpp  excpts.hpp  expression.hpp  operator.hpp  partydecl.hpp  poly.hpp  protocol.hpp  share.hpp  type.hpp
src/mpclib/: builtin.hpp  context.hpp  field.hpp  mpc.hpp  mpc_exceptions.hpp  party.hpp  poly.hpp  protocol.hpp  random.hpp  share.hpp
test/backend/: Makefile  test_add.cpp  test_full_bgw.cpp  test_graph.cpp  test_graph2.cpp  test_linear_bgw.cpp
test/bgw/: .gitignore  prove_helper.hpp  test_add.cpp  test_full_bgw.cpp  test_linear_bgw.cpp  test_mul.cpp  test_scalable.cpp
test/conversion/: .gitignore  CMakeLists.txt  Makefile  test_bin2arith.cpp
test/mpcgraph/: Makefile  test_multi.cpp  test_party.cpp  test_poly.cpp  test_protocol.cpp  test_share.cpp  test_var.cpp
test/mpclib/: Makefile  test.cpp  test_builtin.cpp  test_ctx.cpp  test_def.cpp  test_defs.cpp  test_protocol.cpp
tools/: antlr.bat  antlr4.bat  antlr4.sh  generate.bat  generate.sh  grun.bat  grun.sh
